[gd_scene load_steps=2 format=3 uid="uid://c5jlv66026do8"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_m7xg4"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_m7xg4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 30.0

[node name="Vida" type="Label" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Vida: 0"

[node name="ProgressBar" type="ProgressBar" parent="Control/PanelContainer"]
modulate = Color(1, 0, 0, 1)
z_index = -1
layout_mode = 2
size_flags_vertical = 1
show_percentage = false

[node name="PanelContainer2" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 30.0
grow_horizontal = 0

[node name="Puntos" type="Label" parent="Control/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Puntos: 0"

[node name="PanelContainer3" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 150.0
grow_vertical = 0

[node name="Mision" type="Label" parent="Control/PanelContainer3"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
text = "Mision: La mision del nivel se est√° cargando... "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="Monedas" type="Label" parent="Control/PanelContainer4"]
layout_mode = 2
size_flags_horizontal = 4
text = "Monedas: 0"
